# ai_terminal

./: Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Dockerfile.ollama  README.md  docker-compose.yml  entrypoint.sh
src/: ai.rs  main.rs  pty_handler.rs  routes.rs  session.rs  utils.rs  ws.rs
warp-web-ui/: package-lock.json  package.json
warp-web-ui/src/app/: page.tsx
warp-web-ui/src/app/components/: SidebarPanel.tsx  TerminalInput.tsx  TerminalLLMInput.tsx  TerminalLLMOutputPanel.tsx  TerminalLLMPanel.tsx  TerminalLog.tsx  types.ts
warp-web-ui/src/app/components/hooks/: useTerminalSession.ts
